# shorts_parcer

./: pyproject.toml
src/: main.py
